tests/netconvert/errors/ignore_errors_and_unknown_vclass/errors.netconvert
Error: Unknown vehicle class 'error-vclass1' encountered.
Error: Unknown vehicle class 'error-vclass2' encountered.
Error: Unknown vehicle class 'error-vclass3' encountered.
